feat: email sender; refactor: user delete